# GoIT_PyWeb_HW8

hw8_web/: find.py  pyproject.toml  seeds.py
hw8_web_02/: Pipfile  consumer.py  models.py  produser.py
