[tool.poetry]
name = "hw8-web"
version = "0.1.0"
description = ""
authors = ["= <=>"]
readme = "README.md"
packages = [{include = "hw8_web"}]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.3.3"
mongoengine = "^0.27.0"
redis = "^4.5.5"
redis-lru = "^0.1.2"
pika = "^1.3.2"
faker = "^18.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
